css/style.css
@import url('https://fonts.googleapis.com/css?family=Andika');
@import url('https://fonts.googleapis.com/css?family=Merriweather');
@import url('http://weloveiconfonts.com/api/?family=entypo');

html,
body,
* {
  margin: 0px;
  padding: 0px;
  transition: background-color 1s ease;
}

body {
  color: white;
  font-family: 'Andika', sans-serif;
  background-color: #1bb996;
}

/* Navigation */
navigation {
  width: 100%;
  position: fixed;
}

navigation ul {
  list-style-type: none;
  margin: 0;
  float: left;
  padding: 1em 0 0 0;
}

navigation li {
  display: inline;
  margin: 20px;
  font-weight: bold;
  font-size: 0.9em;
}


/* Cover photo */
.hero {
  background-image: url('../images/flawless-cover-bw.png');
  background-size: cover;
  background-repeat: no-repeat;
  max-height: 90vh;
  text-align: right;
  padding:8em 2em 4em;
}


/* ABOUT */
.hero h1 {
  font-size:1.7em;
  margin-bottom:0;
  font-weight:bold;
  text-shadow: 2px 2px 3px #000;
}
.hero.flex-container {
  margin:0 auto;
  justify-content:space-around;
}
.hero a {
  color:white;
}
.hero a:hover {
  color:#FFBE00;
}
.hero .flex-item.left .flex-item.right{
  align-self:center;
}
.hero .flex-item li {
  list-style: none;
}
.hero .flex-item .center {
  margin:0 auto;
}


section {
  text-align: center;
  padding: 5em 0 3em;
  background-color: #1bb996;
}

/* Link styles */
a {
  text-decoration: none;
  color: white;
  display: inline-block;
}

#faq a {
  color:#2E7AD4;
}

#faq a:hover {
  color:white;
}

/** Code of conduct */
.conduct {
 font-size: 20px;
}
.conduct a {
  color: #FFBE00;
}

.conduct a:hover {
 color: #403E8E;
}

/* Header styles */
h1 {
  font-size:1.4em;
  margin-bottom:1.2em;
}
h2 {
  font-size:1.2em;
}
h3 {
  font-family:'Merriweather', serif;
}

.flex-container {
  display:flex;
  flex-wrap:wrap;
  justify-content:space-between;
  align-items:center;
}
.flex-item {
  display:flex;
  text-align:left;
  flex-wrap: wrap;
  width:45%;
  min-width:300px;
}

/* Panel styles  */
.panel {
  padding:5em 5em;
}

/* Registration button */
.button {
  max-width: 200px;
  margin:1em 0em;
  border: solid 2px;
  padding: 5px 10px 5px 10px;
  border-radius: 2px;
  text-transform: uppercase;
  font-size:1.3em;
}

.button:hover {
  background: rgba(255, 255, 255, 0.4);
}

.button > a,
.button > a:hover {
  color:white !important;
}
/* WORKSHOPS */

#workshops {
  background-color:#FFBE00;
  color: #363636;
}
#workshops h1 {
  display:inline-block;
}
.workshop {
  display:flex;
}
.workshop .content {
  margin: 20px;
}
.workshop h3 i {
  font-size:.7em;
}
.workshop p {
  margin: 0 auto;
  max-width: 700px;
  font-size:.9em;
}
.workshop .photo > img{
  height:200px;
  padding: 20px;
}

/* SPEAKERS */

#keynote {
  background-color: #2E7AD4;
  color: white;
}

#keynote .flex-container {
  align-items: flex-start;
  justify-content: space-around;
}
.speaker {
  display:flex;
  flex-direction: column;
  flex-wrap: wrap;
  width:50%;
  min-width:400px;
}
.speaker .content {
  margin: 20px;
}
.speaker h1 {
  font-family:'Merriweather', serif;
  margin-bottom: 16px;
}
.speaker .content h3  {
  font-family:'Andika', sans-serif;
  display:inline-block;
  text-transform: uppercase;
  font-size:1em;
  font-weight:bold;
  letter-spacing: 1px;
  color:#363636;
  background-color:#FFBE00;
  line-height: 20px;
  margin-bottom: 16px;
}
.speaker .content h3 span {
  padding:1px 10px;
  background-color:#FFBE00;
}
.speaker p {
  margin: 0 auto;
  max-width: 700px;
  font-size:.9em;
}
.speaker .photo > img{
  height:250px;
  padding: 10px;
}
.speaker a {
  color:white;
}
.speaker a:hover {
  color:#363636;
}

/* FAQ */

#faq {
  background-color:#DCDCDC;
  color: #363636;
}
#faq h3 {
    font-size:1em;
    text-transform: none;
}
#faq p {
  font-size:.85em;
  margin-bottom: 1em;
}
#faq a {
  font-weight: bold;
}
#faq a:hover {
  color:#D85465;
}

/* COLORS */

.color-main {
  background-color: #1BB996;
}

.color-teal {
  background-color: #1BB996;
}

.color-gray {
  background-color: #363636;
}
.color-blue {
  background-color: #006891;
}

.color-red {
  background-color: #D85465;
}

.color-black {
  background-color: #3C4240;
}

.color-orange {
  background-color: #F19031;
}

/* Schedule */
#schedule {
  background-color: #363636;
  padding-bottom:30px;
}
.schedule-mobile { display:none;}
.schedule {
  max-width:600px;
  margin: 0 auto;
  display:flex;
  justify-content:center;
  line-height:2.5em;
}
.schedule p {
  height: 40px;
}
.time {
  display:inline-block;
  margin: 0 auto;
  margin-right:20px;
  text-align:right;
  float:center;
}
.event {
  display:inline-block;
  margin-right: 0;
  text-align:left;
  float:center;
}

/* Summary */
#about {
  background-color: #2E7AD4;
}
.content h3 {
  font-size:1.4em;
  line-height: 1.5em;

}
.content {
  max-width: 650px;
  margin: 0 auto;
}
.img-line {
  display:flex;
  flex-wrap:wrap;
}

/* SPONSORS */

#sponsors {
  background-color: #363636;
}
#sponsors a {
  color: #2E7AD4;
}
.sponsorsection {
  margin: 0 auto;
  display:flex;
  flex-wrap:wrap;
  justify-content: center;
  align-items: center;
}
.sponsor{
  display:flex;
  margin: 20px;
  background-color: transparent;
  /* border: 2px solid white; */
  border-radius: 3px;
  -webkit-filter: brightness(0) invert(1);
}

.sponsor:hover{
  -webkit-filter: none;
  /* background-color: white; */
}

.sponsor img {
  max-width:100%;
  max-height:100%;
  margin: auto;
}

.platinum {
  width: 280px;
  height:100px;
}

.gold {
  width:250px;
  height:70px;
}

.silver {
  height:40px;
}


.tag {
  display:inline-block;
  text-transform: uppercase;
  font-size:.7em;
  margin-bottom:5px;
  padding:2px 10px;
  color:white;
  font-weight:bold;
  letter-spacing: 1px;
}
.tag.optional {
  display:inline;
  color: #FFBE00;
  margin:0;
  padding:0 10px 0 0;
}
.beginner {
  background-color: #2E7AD4;
}
.advanced {
  background-color: #D85465;
}

.mentor-grid {
  max-width:1000px;
  margin: 0 auto;
  padding:20px;
  display:flex;
  justify-content:center;
  flex-wrap: wrap;
}
.mentor-card{
  margin: 10px;
  max-width: 200px;
}
.mentor-card > p {
  font-style: italic;
}
.mentor-photo {
  -webkit-filter: grayscale(1) brightness(1.2);
  height:140px;
}
.mentor-photo:hover {
  -webkit-filter: none;
}

.icon {
  width:100%;

}
.icon > img {
  display: flex;
  align-content: center;
  margin: 0 auto;
  height:100px;
}


/* FOOTER */

.bottom {
  position:relative;
  background-color: #363636;
  text-align: left;
  padding: 5em 2em 1em;
}

.footer {
  position: absolute;
  bottom: 10px;
}
.footer a {
  font-size:1.2em;
  margin-right:.5em;
}
.footer a:hover {
  color:#D85465;
}
[class*="entypo-"]:before {
  font-family: 'entypo', sans-serif;
}

/* MOBILE */
@media (max-width:780px) {
  .img-line {
    display:none;
  }
}
@media (max-width: 750px) {
  /* Cover photo on small browser or mobile */
  .hero {
    max-height:100%;
    text-align: center;
    padding:5em 2em;
  }

  .hero h1 {
    font-size:1.4em;
  }
  .hero  > .flex-container {
    margin:0 auto;
    justify-content:center;
  }
  .flex-item.right .center {
    margin-top: 3em;
  }
  .workshop {
    flex-wrap:wrap;
    align-content: center;
  }
  .workshop .photo > img {
    margin:0 auto;
    padding:20px 10px 0px;
  }
}

@media (max-width: 530px) {

  /* This is how it looks on mobile */
  navigation {
    display: none;
  }
  .schedule {
    display:none;
  }
  .schedule-mobile {
    display:block;
  }
  .panel {
    padding: 5em 2em;
  }
  #workshops h1 {
    margin-bottom:0;
  }
}

}

